--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -11,10 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-  <link rel="stylesheet" href="Frontend\src\styles.scss"  crossorigin="anonymous">
+  <link src="Frontend\styles.scss" rel="stylesheet">
 
 </head>
 <body>
-  <app-root></app-root>
+  <app-root  ></app-root>
 </body>
 </html>
